--- a/views/about/IntroductionSection/IntroductionSection.module.scss
+++ b/views/about/IntroductionSection/IntroductionSection.module.scss
@@ -92,7 +92,7 @@
           @include flex(column);
 
           position: relative;
-          overflow: visible;
+          overflow: hidden;
         }
       }
     }
