--- a/views/careers/WhoWeAreSection/WhoWeAreSection.module.scss
+++ b/views/careers/WhoWeAreSection/WhoWeAreSection.module.scss
@@ -27,6 +27,7 @@
       white-space: nowrap;
       margin-bottom: rem-calc(70);
       height: 450px;
+      overflow: hidden;
 
       .innerImageWrapper {
         position: absolute;
